--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li class="header__links-list-item no-right-margin-item"><a class="header__link">об аукционе</a></li>
 		</ul>
 	  </nav>
-	  <a class="header__logo"><img src="/images/logo-black.svg" class="header__logo-image" alt="Logo"></a>
+	  <a class="header__logo"><img src="images/logo-black.svg" class="header__logo-image" alt="Logo"></a>
 	  <div class="header__address">
 		<address class="address">
 			<a href="tel:+70000000">+9 999 555 5555</a><br>
@@ -82,7 +82,7 @@
 		<section class="about">
 		  <div class="about__column">
 			<div class="about__logo">
-			  <img src="/images/logo-white.svg" class="about__logo-image" alt="logo-white">
+			  <img src="images/logo-white.svg" class="about__logo-image" alt="logo-white">
 			</div>
 		  </div>
 		  <div class="about__column about-second__column">
@@ -111,13 +111,13 @@
 	  </nav>
 	  <ul class="footer__social-list">
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="/images/yt.svg" alt="YouTube" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="images/yt.svg" alt="YouTube" class="footer__social-icon"></a>
 		</li>
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="/images/vk.svg" alt="VK" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="images/vk.svg" alt="VK" class="footer__social-icon"></a>
 		</li>
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="/images/pinterest.svg" alt="Pinterest" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon"></a>
 		</li>
 	  </ul>
 	</footer>
