--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-	<header class="header">
+	<header class="header content-section">
 	  <nav class="header__menu">
 	    <ul class="header__links-list">
 			<li class="header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active">главная</a></li>
@@ -18,7 +18,7 @@
 			<li class="header__links-list-item no-right-margin-item"><a class="header__link">об аукционе</a></li>
 		</ul>
 	  </nav>
-	  <a class="header__logo"><img src="images/logo-black.svg" class="header__logo-image" alt="Logo"></a>
+	  <a class="header__logo"><img src="./images/logo-black.svg" class="header__logo-image" alt="Logo"></a>
 	  <div class="header__address">
 		<address class="address">
 			<a href="tel:+70000000">+9 999 555 5555</a><br>
@@ -46,7 +46,7 @@
 			  <button class="bet-button">Сделать ставку</button>
 			</div>
 		</section>
-		<section class="lots">
+		<section class="lots content-section">
 		  <h2 class="lots__heading">Лоты</h2>
 		  <ul class="lots__card-list">
 			<li class="lots__card-list-item">
@@ -79,10 +79,10 @@
 		  </ul>
 		  <a class="lots__look-more-link">посмотреть больше</a>
 		</section>
-		<section class="about">
+		<section class="about content-section">
 		  <div class="about__column">
 			<div class="about__logo">
-			  <img src="images/logo-white.svg" class="about__logo-image" alt="logo-white">
+			  <img src="./images/logo-white.svg" class="about__logo-image" alt="logo-white">
 			</div>
 		  </div>
 		  <div class="about__column about-second__column">
@@ -94,7 +94,7 @@
 		  </div>
 		</section>
 	</main>
-	<footer class="footer">
+	<footer class="footer content-section">
 	  <div class="footer__address">
 		<address class="address">
 		  <a href="tel:+70000000">+9 999 555 5555</a><br>
@@ -111,13 +111,13 @@
 	  </nav>
 	  <ul class="footer__social-list">
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="images/yt.svg" alt="YouTube" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="./images/yt.svg" alt="YouTube" class="footer__social-icon"></a>
 		</li>
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="images/vk.svg" alt="VK" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="./images/vk.svg" alt="VK" class="footer__social-icon"></a>
 		</li>
 		<li class="footer__social-list-item">
-		  <a class="footer__social-link"><img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon"></a>
+		  <a class="footer__social-link"><img src="./images/pinterest.svg" alt="Pinterest" class="footer__social-icon"></a>
 		</li>
 	  </ul>
 	</footer>
