--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 	<link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-	<header class="header content-section">
+	<header class="header">
 	  <nav class="header__menu">
 	    <ul class="header__links-list">
 			<li class="header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active">главная</a></li>
 			<li class="header__links-list-item"><a class="header__link">посмотреть лоты</a></li>
-			<li class="header__links-list-item no-right-margin-item"><a class="header__link">об аукционе</a></li>
+			<li class="header__links-list-item"><a class="header__link">об аукционе</a></li>
 		</ul>
 	  </nav>
-	  <a class="header__logo"><img src="./images/logo-black.svg" class="header__logo-image" alt="Logo"></a>
+	  <a class="header__logo"><img src="./images/logo-black.svg" class="header__logo-image" alt="Логотип"></a>
 	  <div class="header__address">
 		<address class="address">
-			<a href="tel:+70000000">+9 999 555 5555</a><br>
-			<a href="mailto:mail@example.com">info@sobaka.ge</a>
-			<p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+			<a href="tel:+99995555555">+9 999 555 5555</a><br>
+			<a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+			<p>наб. Принсенграхт 263-265, Амстердам</p>
 		</address>
 	  </div>
 	</header>
@@ -42,11 +42,11 @@
 			  </span> 
 			</h1>
 			<div class="cover__description">
-			  <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
-			  <button class="bet-button">Сделать ставку</button>
+			  <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+			  <button class="bet-button" type="button">Сделать ставку</button>
 			</div>
 		</section>
-		<section class="lots content-section">
+		<section class="lots">
 		  <h2 class="lots__heading">Лоты</h2>
 		  <ul class="lots__card-list">
 			<li class="lots__card-list-item">
@@ -79,7 +79,7 @@
 		  </ul>
 		  <a class="lots__look-more-link">посмотреть больше</a>
 		</section>
-		<section class="about content-section">
+		<section class="about">
 		  <div class="about__column">
 			<div class="about__logo">
 			  <img src="./images/logo-white.svg" class="about__logo-image" alt="logo-white">
@@ -88,20 +88,18 @@
 		  <div class="about__column about-second__column">
 			<h2 class="about__title">Об аукционе</h2>
 			<div class="about__text">
-			  <p class="about__first-paragraph">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-			  <p class="about__second-paragraph">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+			  <p class="about__paragraph">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+			  <p class="about__paragraph">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
 			</div>
 		  </div>
 		</section>
 	</main>
-	<footer class="footer content-section">
-	  <div class="footer__address">
-		<address class="address">
-		  <a href="tel:+70000000">+9 999 555 5555</a><br>
-		  <a href="mailto:mail@example.com">info@sobaka.ge</a>
-		  <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+	<footer class="footer">
+		<address class="address footer__address">
+		  <a href="tel:+99995555555">+9 999 555 5555</a><br>
+		  <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+		  <p>наб. Принсенграхт 263-265, Амстердам</p>
 		</address>
-	  </div>
 	  <nav class="footer__menu">
 	    <ul class="footer__menu-list">
 		  <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link_active">главная</a></li>
